# grounded

./: .gitignore  pyproject.toml  requirements.txt
.github/workflows/: weekly_digest.yml
docs/: 2026-03-22.html  2026-03-23.html  2026-03-30.html  2026-04-05.html  2026-04-12.html  2026-04-19.html  2026-04-26.html  index.html
grounded/: arxiv_client.py  digest.py  grouper.py  renderer.py  semantic_scholar.py  summarizer.py
templates/: base.html  index.html  week.html
