[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "grounded"
version = "0.1.0"
description = "Weekly math research digest from arXiv + Claude"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.25.0",
    "jinja2>=3.1.4",
    "requests>=2.31.0",
]

[project.scripts]
grounded = "grounded.digest:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["grounded*"]
